--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,12 +6,13 @@ export(import_boa)
 export(import_danske)
 export(import_natwest)
 export(import_revolut)
-export(myApp)
+export(run_app)
 export(to_utf8)
 import(dplyr)
 import(lubridate)
 import(plotly)
 import(priceR)
+import(purrr)
 import(reactable)
 import(readr)
 import(readxl)
@@ -19,3 +20,5 @@ import(rhandsontable)
 import(shiny)
 import(shinydashboard)
 import(stringr)
+importFrom(stats,dist)
+importFrom(utils,head)
