--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,8 +6,10 @@ export(import_boa)
 export(import_danske)
 export(import_natwest)
 export(import_revolut)
+export(plot_waterfall)
 export(run_app)
 export(to_utf8)
+export(transform_master_for_waterfall)
 import(dplyr)
 import(lubridate)
 import(plotly)
