add plot_balance function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(import_boa)
 export(import_danske)
 export(import_natwest)
 export(import_revolut)
+export(plot_balances)
 export(plot_waterfall)
 export(run_app)
 export(to_utf8)
